# wai_bindgen_sample

./: build.sh  sample-protocol-host.wai  sample-protocol-plugin.wai
wai-sample-host/: Cargo.toml
wai-sample-host/src/: main.rs
wai-sample-plugin/: Cargo.toml
wai-sample-plugin/src/: lib.rs
wai-sample-wasmer-host/: Cargo.toml
wai-sample-wasmer-host/src/: main.rs
wai-sample-wasmtime-host/src/: main.rs
